--- a/layout-planner/index.html
+++ b/layout-planner/index.html
@@ -38,7 +38,7 @@
                     <!-- Zoom Controls (hidden on mobile) -->
                     <div class="hidden md:flex items-center gap-2">
                         <button id="zoomOutBtn" class="h-9 px-4 bg-blue-500 hover:bg-blue-600 text-white rounded-full text-base leading-none font-bold">−</button>
-                        <span id="zoomLevel" class="w-12 text-sm font-medium text-center select-none">100%</span>
+                        <input id="zoomLevel" type="text" class="w-16 text-sm font-medium text-center border rounded p-1" value="100%" />
                         <button id="zoomInBtn"  class="h-9 px-4 bg-blue-500 hover:bg-blue-600 text-white rounded-full text-base leading-none font-bold">+</button>
                         <button id="resetZoomBtn" class="h-9 px-3 bg-green-500 hover:bg-green-600 text-white rounded text-xs font-medium">Reset</button>
                         <button id="centerBtn"    class="h-9 px-3 bg-green-500 hover:bg-green-600 text-white rounded text-xs font-medium">Center</button>
@@ -79,12 +79,13 @@
                         <span class="transform transition-transform" id="buildingsArrow">▼</span>
                     </button>
                     <div id="buildingsSection" class="p-4">
-                        <div id="toolbar-buildings" class="grid grid-cols-2 gap-2 mb-4">
+                        <div id="toolbar-buildings" class="grid grid-cols-3 gap-2 mb-4">
                             <button data-type="flag" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-3 rounded-lg text-sm font-medium">Flag</button>
                             <button data-type="city" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-3 rounded-lg text-sm font-medium">City</button>
                             <button data-type="building" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-3 rounded-lg text-sm font-medium">Trap</button>
                             <button data-type="hq" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-3 rounded-lg text-sm font-medium">HQ</button>
-                            <button data-type="node" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-3 rounded-lg text-sm font-medium">Node</button>
+                            <button data-type="node" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-3 rounded-lg text-sm font-medium">Alliance Node</button>
+                            <button data-type="mine" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-3 rounded-lg text-sm font-medium">Alliance Mine</button>
                             <button data-type="obstacle" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-3 rounded-lg text-sm font-medium">Obstacle</button>
                         </div>
                         <div class="text-sm p-3 bg-gray-100 rounded-lg text-center space-y-1">
@@ -99,6 +100,7 @@
                         <div class="flex justify-center space-x-2">
                             <span>HQ: <span id="hqCounter" class="font-bold">0</span></span>
                             <span>Nodes: <span id="nodeCounter" class="font-bold">0</span></span>
+                            <span>Mines: <span id="mineCounter" class="font-bold">0</span></span>
                         </div>
                         </div>
                     </div>
